    - added GdkWindow::set_icon() method. (Andrei)
    - implemented GtkList methods insert_items() and prepend_items. (Andrei)
    - implemented new PHP-like build system that supports adding extensions to
      PHP-GTK. (Andrei)
    - implemented GtkCTree methods node_get_pixtext(), node_get_pixmap(), and
      get_node_info().  (Andrei)
    - implemented GtkObject::emit(), thus allowing programmatical emission of
      signals. (Andrei)
    - added support for accessing GtkObject arguments via get_arg() and
      set_arg() methods. (Andrei)

Version 0.0.4 "indistinguishable from magic": 05-May-2001
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    - improved speed/memory efficiency by having only one wrapper for boxed
      types, except for GdkEvent, GdkColor and GdkAtom. (Andrei)
    - implemented object overloading emulation layer to correct for Zend
      engine's problems, now it's possible to assign and read custom properties
      on Gtk+ objects. (Andrei)
    - added GtkAspectFrame class definition. (Andrei)
    - added GtkCTree traversal functions. (Andrei)
    - optimized internal resource handling, this should save on memory. (Andrei)
    - fixed a bug that would corrupt object type when setting cascaded property.
      (Andrei)
    - added a few more properties to GtkCTree and GtkCList. (Andrei)
    - implemented GtkMenu::popup(). (Andrei)
    - fixed GtkCTree::insert_row() for good, added GtkCTree methods
      node_set_row_data() and node_get_row_data(). (Andrei)
    - added helper GtkCListRow class. (Andrei)
    - separated GdkWindow, GdkBitmap, GdkPixmap implementations to allow for
      more flexibility and clarity. (Andrei)
    - implemented GtkObject methods get_data(), set_data, connect_after(),
      connect_object_after(). (Andrei)
    - added several more widget examples to gtk.php. (Andrei)
    - added ability to get and set color for GtkColorSelection. (Andrei)

Version 0.0.3 "slow glass": 20-Mar-2001